--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -13,6 +13,14 @@
     android:layout_centerHorizontal="true"
     android:src="@drawable/smartpark"
     />
-
+<Button
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="Login"
+    android:background="@drawable/bubble"
+    android:layout_marginRight="50dp"
+    android:layout_marginLeft="50dp"
+    android:layout_marginBottom="70dp"
+    android:layout_alignParentBottom="true"/>
 
 </RelativeLayout>
