--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -34,6 +34,15 @@ android:background="#3F51B5"
     android:layout_below="@id/image_park"
     android:textSize="15sp"
     />
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Login"
+        android:background="@drawable/bubble"
+        android:layout_marginRight="50dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginBottom="70dp"
+        android:layout_alignParentBottom="true"/>
 
 
 </RelativeLayout>
