--- a/app/src/main/res/drawable/bubble_approaching.xml
+++ b/app/src/main/res/drawable/bubble_approaching.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <solid android:color="#ffffff" />
+    <solid android:color="#FFCD2E" />
     <stroke android:color="#000" android:width="1dp"/>
     <corners android:radius="50dp"/>
 </shape>
