--- a/app/src/main/res/layout/activity_display.xml
+++ b/app/src/main/res/layout/activity_display.xml
@@ -5,20 +5,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ActivityDisplay"
-    android:background="#fdf">
+    android:background="#3F51B5">
 
     <LinearLayout
         android:layout_marginTop="100dp"
         android:layout_width="match_parent"
         android:layout_height="150dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        >
     <View
         android:id="@+id/occupied"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/bubble_parked"
         android:layout_weight="1"
-        android:layout_margin="5dp"/>
+        android:layout_margin="5dp"
+
+        />
         <View
             android:id="@+id/approaching"
             android:layout_width="wrap_content"
@@ -34,6 +37,13 @@
             android:layout_weight="1"
             android:layout_margin="5dp"/>
     </LinearLayout>
+
+    <ImageView
+        android:layout_width="90dp"
+        android:layout_height="130dp"
+        android:src="@drawable/car"
+        android:layout_centerInParent="true"
+        />
 
     <View
         android:layout_width="200dp"
