--- a/app/src/main/res/layout/activity_display.xml
+++ b/app/src/main/res/layout/activity_display.xml
@@ -7,6 +7,8 @@
     tools:context=".ActivityDisplay"
     android:background="#3F51B5">
 
+
+
     <LinearLayout
         android:layout_marginTop="100dp"
         android:layout_width="match_parent"
@@ -38,18 +40,90 @@
             android:layout_margin="5dp"/>
     </LinearLayout>
 
-    <ImageView
-        android:layout_width="90dp"
-        android:layout_height="130dp"
-        android:src="@drawable/car"
-        android:layout_centerInParent="true"
-        />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="230dp"
+        android:orientation="horizontal"
+        >
+        <ImageView
+           android:layout_marginTop="100dp"
+            android:layout_width="200dp"
+            android:layout_height="130dp"
+            android:src="@drawable/car"
+            android:layout_weight="1"
+
+            />
+        <ImageView
+            android:layout_marginTop="25dp"
+            android:layout_width="200dp"
+            android:layout_height="130dp"
+            android:src="@drawable/car"
+            android:layout_weight="1"
+            />
+        <ImageView
+            android:src="@drawable/car"
+            android:layout_width="200dp"
+            android:layout_height="130dp"
+            android:layout_marginTop="100dp"
+            android:layout_weight="1"
+            android:alpha="0"
+            />
+    </LinearLayout>
+
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:orientation="horizontal"
+        android:layout_marginTop="280dp"
+        >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Status:Occupied"
+            android:textColor="#ffff"
+            android:textSize="12sp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Status:Approaching"
+            android:textColor="#ffff"
+            android:textSize="12sp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+
+
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Status:Unoccupied"
+            android:textColor="#ffff"
+            android:textSize="12sp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+
+            />
+
+
+    </LinearLayout>
+
+
 
     <View
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:background="@drawable/bubble"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="100dp"
         android:layout_alignParentBottom="true"/>
+
 </RelativeLayout>
